--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.1",
+    "firebase-admin": "^13.4.0",
     "helmet": "^8.1.0",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
